--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.6.1/schema.json",
 	"files": {
-		"ignore": [".next", "node_modules", ".vercel", "**/package.json"]
+		"ignore": [".next", "node_modules", ".vercel", "**/package.json", "apps/api/build"]
 	},
 	"formatter": {
 		"formatWithErrors": true,
