build(api): use env var PORT 3001

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node bin/server.js",
     "build": "node ace build",
-    "dev": "node ace serve --hmr",
+    "dev": "PORT=3001 node ace serve --hmr",
     "test": "node ace test",
     "typecheck": "tsc --noEmit"
   },
