--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,7 +32,10 @@
     "@adonisjs/tsconfig": "^1.3.0",
     "@swc/core": "^1.5.7",
     "@types/node": "^20.12.12",
+    "@types/pg": "^8",
+    "execa": "9.1.0",
     "hot-hook": "^0.2.6",
+    "kysely-codegen": "0.15.0",
     "pino-pretty": "^11.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
@@ -44,6 +47,8 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^20.6.0",
     "@vinejs/vine": "^2.0.0",
+    "kysely": "0.27.3",
+    "pg": "8.11.5",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
