--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,9 @@
     "start": "node bin/server.js",
     "build": "node ace build",
     "dev": "PORT=3001 node ace serve --hmr",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "migrate:create": "drizzle-kit generate",
+    "migrate:apply": "drizzle-kit migrate"
   },
   "imports": {
     "#controllers/*": "./app/controllers/*.js",
@@ -33,9 +35,10 @@
     "@swc/core": "^1.5.7",
     "@types/node": "^20.12.12",
     "@types/pg": "^8",
+    "dotenv": "16.4.5",
+    "drizzle-kit": "0.22.1",
     "execa": "9.1.0",
     "hot-hook": "^0.2.6",
-    "kysely-codegen": "0.15.0",
     "pino-pretty": "^11.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
@@ -48,8 +51,9 @@
     "@adonisjs/lucid": "^20.6.0",
     "@trpc/server": "11.0.0-rc.382",
     "@vinejs/vine": "^2.0.0",
-    "kysely": "0.27.3",
+    "drizzle-orm": "0.31.0",
     "pg": "8.11.5",
+    "postgres": "3.4.4",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
