--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@adonisjs/assembler": "^7.6.1",
     "@adonisjs/tsconfig": "^1.3.0",
+    "@simplewebauthn/types": "10.0.0",
     "@swc/core": "^1.5.7",
     "@types/node": "^20.12.12",
     "@types/pg": "^8",
@@ -48,13 +49,16 @@
     "@adonisjs/auth": "^9.2.1",
     "@adonisjs/core": "^6.9.0",
     "@adonisjs/cors": "^2.2.1",
-    "@adonisjs/lucid": "^20.6.0",
+    "@adonisjs/redis": "^8.0.1",
+    "@paralleldrive/cuid2": "2.2.2",
+    "@simplewebauthn/server": "10.0.0",
     "@trpc/server": "11.0.0-rc.382",
     "@vinejs/vine": "^2.0.0",
+    "convert": "5.3.0",
     "drizzle-orm": "0.31.0",
-    "pg": "8.11.5",
     "postgres": "3.4.4",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "typia": "6.0.5"
   },
   "hotHook": {
     "boundaries": [
