--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,70 +1,76 @@
 {
-  "name": "@hours.frc.sh/api",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "license": "UNLICENSED",
-  "scripts": {
-    "start": "node bin/server.js",
-    "build": "node ace build",
-    "dev": "PORT=3001 node ace serve --hmr",
-    "typecheck": "tsc --noEmit",
-    "migrate:create": "drizzle-kit generate",
-    "migrate:apply": "drizzle-kit migrate"
-  },
-  "imports": {
-    "#controllers/*": "./app/controllers/*.js",
-    "#exceptions/*": "./app/exceptions/*.js",
-    "#models/*": "./app/models/*.js",
-    "#mails/*": "./app/mails/*.js",
-    "#services/*": "./app/services/*.js",
-    "#listeners/*": "./app/listeners/*.js",
-    "#events/*": "./app/events/*.js",
-    "#middleware/*": "./app/middleware/*.js",
-    "#validators/*": "./app/validators/*.js",
-    "#providers/*": "./providers/*.js",
-    "#policies/*": "./app/policies/*.js",
-    "#abilities/*": "./app/abilities/*.js",
-    "#database/*": "./database/*.js",
-    "#start/*": "./start/*.js",
-    "#config/*": "./config/*.js"
-  },
-  "devDependencies": {
-    "@adonisjs/assembler": "^7.6.1",
-    "@adonisjs/tsconfig": "^1.3.0",
-    "@simplewebauthn/types": "10.0.0",
-    "@swc/core": "^1.5.7",
-    "@types/node": "^20.12.12",
-    "@types/pg": "^8",
-    "dotenv": "16.4.5",
-    "drizzle-kit": "0.22.1",
-    "execa": "9.1.0",
-    "hot-hook": "^0.2.6",
-    "pino-pretty": "^11.1.0",
-    "prettier": "^3.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "@adonisjs/auth": "^9.2.1",
-    "@adonisjs/core": "^6.9.0",
-    "@adonisjs/cors": "^2.2.1",
-    "@adonisjs/redis": "^8.0.1",
-    "@paralleldrive/cuid2": "2.2.2",
-    "@simplewebauthn/server": "10.0.0",
-    "@trpc/server": "11.0.0-rc.382",
-    "@vinejs/vine": "^2.0.0",
-    "convert": "5.3.0",
-    "drizzle-orm": "0.31.0",
-    "postgres": "3.4.4",
-    "reflect-metadata": "^0.2.2",
-    "typia": "6.0.5"
-  },
-  "hotHook": {
-    "boundaries": [
-      "./app/controllers/**/*.ts",
-      "./app/routers/**/*.ts",
-      "./app/middleware/*.ts"
-    ]
-  }
+	"name": "@hours.frc.sh/api",
+	"version": "0.0.0",
+	"private": true,
+	"license": "UNLICENSED",
+	"type": "module",
+	"imports": {
+		"#controllers/*": "./app/controllers/*.js",
+		"#exceptions/*": "./app/exceptions/*.js",
+		"#models/*": "./app/models/*.js",
+		"#mails/*": "./app/mails/*.js",
+		"#services/*": "./app/services/*.js",
+		"#listeners/*": "./app/listeners/*.js",
+		"#events/*": "./app/events/*.js",
+		"#middleware/*": "./app/middleware/*.js",
+		"#validators/*": "./app/validators/*.js",
+		"#providers/*": "./providers/*.js",
+		"#policies/*": "./app/policies/*.js",
+		"#abilities/*": "./app/abilities/*.js",
+		"#database/*": "./database/*.js",
+		"#start/*": "./start/*.js",
+		"#config/*": "./config/*.js"
+	},
+	"scripts": {
+		"build": "node ace build",
+		"dev": "PORT=3001 node ace serve --watch",
+		"dev:debug": "PORT=3001 node --inspect ace serve --hmr",
+		"migrate:apply": "drizzle-kit migrate",
+		"migrate:create": "drizzle-kit generate",
+		"start": "node bin/server.js",
+		"typecheck": "tsc --noEmit"
+	},
+	"dependencies": {
+		"@adonisjs/auth": "^9.2.1",
+		"@adonisjs/core": "^6.9.0",
+		"@adonisjs/cors": "^2.2.1",
+		"@adonisjs/redis": "^8.0.1",
+		"@adonisjs/session": "^7.4.1",
+		"@paralleldrive/cuid2": "2.2.2",
+		"@simplewebauthn/server": "10.0.0",
+		"@trpc/server": "11.0.0-rc.382",
+		"@vinejs/vine": "^2.0.0",
+		"convert": "5.3.0",
+		"drizzle-orm": "0.31.0",
+		"postgres": "3.4.4",
+		"reflect-metadata": "^0.2.2",
+		"superjson": "2.2.1",
+		"zod": "3.23.8"
+	},
+	"devDependencies": {
+		"@adonisjs/assembler": "^7.6.1",
+		"@adonisjs/tsconfig": "^1.3.0",
+		"@simplewebauthn/types": "10.0.0",
+		"@swc/core": "^1.5.7",
+		"@types/node": "^20.12.12",
+		"@types/pg": "^8",
+		"dotenv": "16.4.5",
+		"drizzle-kit": "0.22.1",
+		"execa": "9.1.0",
+		"hot-hook": "^0.2.6",
+		"pino-pretty": "^11.1.0",
+		"prettier": "^3.2.5",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.4.5"
+	},
+	"packageManager": "yarn@4.2.2",
+	"hotHook": {
+		"boundaries": [
+			"./app/controllers/**/*.ts",
+			"./app/routers/**/*.ts",
+			"./app/**/*_controller.ts",
+			"./app/**/*_router.ts",
+			"./app/middleware/*.ts"
+		]
+	}
 }
