--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,14 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "2.1.3",
+		"@hookform/resolvers": "^3.6.0",
 		"@jonahsnider/util": "10.3.0",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-context-menu": "^2.1.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-portal": "1.0.4",
 		"@radix-ui/react-progress": "^1.0.3",
@@ -25,6 +27,8 @@
 		"@radix-ui/react-switch": "^1.0.3",
 		"@radix-ui/react-tabs": "1.0.4",
 		"@radix-ui/react-tooltip": "^1.0.7",
+		"@simplewebauthn/browser": "10.0.0",
+		"@tanstack/react-query": "5.40.1",
 		"@tanstack/react-table": "8.16.0",
 		"@trpc/client": "next",
 		"@trpc/next": "next",
@@ -54,12 +58,14 @@
 		"react": "18.2.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.51.5",
+		"server-only": "0.0.1",
 		"superjson": "2.2.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss": "3.4.1",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "5.4.2",
-		"zod": "3.22.4"
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"dotenv": "16.4.5",
