--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -60,6 +60,7 @@
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.51.5",
 		"server-only": "0.0.1",
+		"sonner": "1.4.41",
 		"superjson": "2.2.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss": "3.4.1",
