--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,7 +47,7 @@
 		"devalue": "4.3.2",
 		"framer-motion": "11.1.8",
 		"fuse.js": "7.0.0",
-		"next": "14.1.3",
+		"next": "15.0.0-canary.14",
 		"next-plausible": "3.12.0",
 		"next-themes": "0.3.0",
 		"next-view-transitions": "0.1.1",
@@ -55,9 +55,9 @@
 		"postcss": "8.4.35",
 		"postcss-import": "16.1.0",
 		"radix-themes-tw": "0.2.3",
-		"react": "18.2.0",
+		"react": "19.0.0-rc-eb259b5d3b-20240605",
 		"react-day-picker": "^8.10.1",
-		"react-dom": "18.2.0",
+		"react-dom": "19.0.0-rc-eb259b5d3b-20240605",
 		"react-hook-form": "^7.51.5",
 		"server-only": "0.0.1",
 		"sonner": "1.4.41",
@@ -70,6 +70,7 @@
 	},
 	"devDependencies": {
 		"dotenv": "16.4.5",
+		"@simplewebauthn/types": "10.0.0",
 		"type-fest": "4.12.0"
 	}
 }
