--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@heroicons/react": "2.1.3",
 		"@hookform/resolvers": "^3.6.0",
-		"@jonahsnider/util": "10.3.0",
+		"@jonahsnider/util": "11.0.0",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-context-menu": "^2.1.5",
@@ -29,48 +29,47 @@
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@simplewebauthn/browser": "10.0.0",
 		"@tanstack/react-query": "5.40.1",
-		"@tanstack/react-table": "8.16.0",
-		"@trpc/client": "next",
-		"@trpc/next": "next",
-		"@trpc/react-query": "next",
-		"@types/node": "20.11.28",
-		"@types/react": "18.2.66",
-		"@types/react-dom": "18.2.22",
+		"@tanstack/react-table": "8.17.3",
+		"@trpc/client": "^11.0.0-rc.396",
+		"@trpc/next": "^11.0.0-rc.396",
+		"@trpc/react-query": "^11.0.0-rc.396",
+		"@types/node": "20.14.2",
+		"@types/react": "18.3.3",
+		"@types/react-dom": "18.3.0",
 		"@uidotdev/usehooks": "2.4.1",
-		"@vercel/analytics": "1.2.2",
-		"autoprefixer": "10.4.18",
-		"chrono-node": "2.7.5",
+		"@vercel/analytics": "1.3.1",
+		"autoprefixer": "10.4.19",
+		"chrono-node": "2.7.6",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"convert": "5.0.0",
+		"convert": "5.3.0",
 		"date-fns": "^3.6.0",
-		"devalue": "4.3.2",
-		"framer-motion": "11.1.8",
+		"framer-motion": "11.2.10",
 		"fuse.js": "7.0.0",
-		"next": "15.0.0-canary.14",
+		"next": "15.0.0-rc.0",
 		"next-plausible": "3.12.0",
 		"next-themes": "0.3.0",
-		"next-view-transitions": "0.1.1",
-		"nuqs": "1.17.2",
-		"postcss": "8.4.35",
+		"next-view-transitions": "0.2.0",
+		"nuqs": "1.17.4",
+		"postcss": "8.4.38",
 		"postcss-import": "16.1.0",
 		"radix-themes-tw": "0.2.3",
-		"react": "19.0.0-rc-eb259b5d3b-20240605",
+		"react": "19.0.0-rc-f994737d14-20240522",
 		"react-day-picker": "^8.10.1",
-		"react-dom": "19.0.0-rc-eb259b5d3b-20240605",
+		"react-dom": "19.0.0-rc-f994737d14-20240522",
 		"react-hook-form": "^7.51.5",
 		"server-only": "0.0.1",
-		"sonner": "1.4.41",
+		"sonner": "1.5.0",
 		"superjson": "2.2.1",
 		"tailwind-merge": "^2.3.0",
-		"tailwindcss": "3.4.1",
+		"tailwindcss": "3.4.4",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "5.4.2",
+		"typescript": "5.4.5",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@simplewebauthn/types": "10.0.0",
 		"dotenv": "16.4.5",
-		"type-fest": "4.12.0"
+		"type-fest": "4.20.0"
 	}
 }
