--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
 		"format": "prettier --check .",
 		"format:write": "yarn format --write",
 		"lint": "biome check .",
-		"lint:fix": "biome check . --apply-unsafe",
+		"lint:fix": "biome check . --write",
 		"test": "yarn lint && yarn format && turbo run build type-check",
 		"type-check": "turbo run type-check"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.6.1",
-		"prettier": "3.2.5",
+		"@biomejs/biome": "1.8.0",
+		"prettier": "3.3.1",
 		"prettier-plugin-packagejson": "2.5.0",
-		"turbo": "1.13.3",
-		"vercel": "33.7.1"
+		"turbo": "1.13.4",
+		"vercel": "34.2.6"
 	},
 	"packageManager": "yarn@4.2.2",
 	"trustedDependencies": [
