--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,7 @@
 	},
 	"dependencies": {
 		"@adonisjs/auth": "^9.2.1",
+		"@adonisjs/bouncer": "^3.1.3",
 		"@adonisjs/core": "^6.9.1",
 		"@adonisjs/cors": "^2.2.1",
 		"@adonisjs/redis": "^8.0.1",
