--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"rootDir": "./",
 		"outDir": "./build",
-		"strict": true
+		"strict": true,
+		"noUncheckedIndexedAccess": true
 	}
 }
