--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,7 +46,7 @@
 		"date-fns": "^3.6.0",
 		"framer-motion": "11.2.10",
 		"fuse.js": "7.0.0",
-		"next": "15.0.0-rc.0",
+		"next": "14.2.3",
 		"next-plausible": "3.12.0",
 		"next-themes": "0.3.0",
 		"next-view-transitions": "0.2.0",
@@ -54,9 +54,9 @@
 		"postcss": "8.4.38",
 		"postcss-import": "16.1.0",
 		"radix-themes-tw": "0.2.3",
-		"react": "19.0.0-rc-f994737d14-20240522",
+		"react": "18.3.1",
 		"react-day-picker": "^8.10.1",
-		"react-dom": "19.0.0-rc-f994737d14-20240522",
+		"react-dom": "18.3.1",
 		"react-hook-form": "^7.51.5",
 		"server-only": "0.0.1",
 		"sonner": "1.5.0",
