feat: fix compilation & prerendering issues causing `next build` to error

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,6 +4,7 @@
 		"rootDir": "./",
 		"outDir": "./build",
 		"strict": true,
+		"lib": ["DOM.Iterable", "ESNext"],
 		"noUncheckedIndexedAccess": true
 	}
 }
