--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
 	],
 	"scripts": {
 		"build": "turbo run build",
+		"dev": "turbo run dev",
 		"format": "prettier --check .",
 		"format:write": "yarn format --write",
 		"lint": "biome check .",
 		"lint:fix": "biome check . --write",
 		"test": "yarn lint && yarn format && turbo run build type-check",
-		"type-check": "turbo run type-check",
-		"dev": "turbo run dev"
+		"type-check": "turbo run type-check"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.0",
