--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,40 +31,40 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@adonisjs/auth": "^9.2.1",
-		"@adonisjs/bouncer": "^3.1.3",
-		"@adonisjs/core": "^6.9.1",
-		"@adonisjs/cors": "^2.2.1",
-		"@adonisjs/redis": "^8.0.1",
-		"@adonisjs/session": "^7.4.1",
-		"@adonisjs/transmit": "^1.0.1",
+		"@adonisjs/auth": "9.2.1",
+		"@adonisjs/bouncer": "3.1.3",
+		"@adonisjs/core": "6.9.1",
+		"@adonisjs/cors": "2.2.1",
+		"@adonisjs/redis": "8.0.1",
+		"@adonisjs/session": "7.4.1",
+		"@adonisjs/transmit": "1.0.1",
 		"@jonahsnider/util": "11.0.0",
 		"@paralleldrive/cuid2": "2.2.2",
 		"@simplewebauthn/server": "10.0.0",
 		"@trpc/server": "11.0.0-rc.403",
-		"@vinejs/vine": "^2.1.0",
+		"@vinejs/vine": "2.1.0",
 		"convert": "5.3.0",
 		"drizzle-orm": "0.31.2",
 		"postgres": "3.4.4",
-		"reflect-metadata": "^0.2.2",
+		"reflect-metadata": "0.2.2",
 		"superjson": "2.2.1",
 		"zod": "3.23.8"
 	},
 	"devDependencies": {
-		"@adonisjs/assembler": "^7.7.0",
-		"@adonisjs/tsconfig": "^1.3.0",
+		"@adonisjs/assembler": "7.7.0",
+		"@adonisjs/tsconfig": "1.3.0",
 		"@simplewebauthn/types": "10.0.0",
-		"@swc/core": "^1.5.25",
-		"@types/node": "^20.14.2",
-		"@types/pg": "^8.11.6",
+		"@swc/core": "1.5.25",
+		"@types/node": "20.14.2",
+		"@types/pg": "8.11.6",
 		"dotenv": "16.4.5",
 		"drizzle-kit": "0.22.7",
 		"execa": "9.2.0",
-		"hot-hook": "^0.2.6",
-		"pino-pretty": "^11.1.0",
-		"prettier": "^3.3.1",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5"
+		"hot-hook": "0.2.6",
+		"pino-pretty": "11.1.0",
+		"prettier": "3.3.1",
+		"ts-node": "10.9.2",
+		"typescript": "5.4.5"
 	},
 	"packageManager": "yarn@4.3.0",
 	"hotHook": {
