--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,29 +10,29 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "2.1.3",
-		"@hookform/resolvers": "^3.6.0",
+		"@hookform/resolvers": "3.6.0",
 		"@jonahsnider/util": "11.0.0",
-		"@radix-ui/react-alert-dialog": "^1.0.5",
-		"@radix-ui/react-avatar": "^1.0.4",
-		"@radix-ui/react-context-menu": "^2.1.5",
-		"@radix-ui/react-dropdown-menu": "^2.0.6",
-		"@radix-ui/react-icons": "^1.3.0",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-alert-dialog": "1.0.5",
+		"@radix-ui/react-avatar": "1.0.4",
+		"@radix-ui/react-context-menu": "2.1.5",
+		"@radix-ui/react-dropdown-menu": "2.0.6",
+		"@radix-ui/react-icons": "1.3.0",
+		"@radix-ui/react-label": "2.0.2",
+		"@radix-ui/react-popover": "1.0.7",
 		"@radix-ui/react-portal": "1.0.4",
-		"@radix-ui/react-progress": "^1.0.3",
-		"@radix-ui/react-select": "^2.0.0",
-		"@radix-ui/react-separator": "^1.0.3",
-		"@radix-ui/react-slot": "^1.0.2",
-		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-progress": "1.0.3",
+		"@radix-ui/react-select": "2.0.0",
+		"@radix-ui/react-separator": "1.0.3",
+		"@radix-ui/react-slot": "1.0.2",
+		"@radix-ui/react-switch": "1.0.3",
 		"@radix-ui/react-tabs": "1.0.4",
-		"@radix-ui/react-tooltip": "^1.0.7",
+		"@radix-ui/react-tooltip": "1.0.7",
 		"@simplewebauthn/browser": "10.0.0",
 		"@tanstack/react-query": "5.45.1",
 		"@tanstack/react-table": "8.17.3",
-		"@trpc/client": "^11.0.0-rc.396",
-		"@trpc/next": "^11.0.0-rc.396",
-		"@trpc/react-query": "^11.0.0-rc.396",
+		"@trpc/client": "11.0.0-rc.396",
+		"@trpc/next": "11.0.0-rc.396",
+		"@trpc/react-query": "11.0.0-rc.396",
 		"@types/node": "20.14.2",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
@@ -40,10 +40,10 @@
 		"@vercel/analytics": "1.3.1",
 		"autoprefixer": "10.4.19",
 		"chrono-node": "2.7.6",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
+		"class-variance-authority": "0.7.0",
+		"clsx": "2.1.1",
 		"convert": "5.3.0",
-		"date-fns": "^3.6.0",
+		"date-fns": "3.6.0",
 		"framer-motion": "11.2.10",
 		"fuse.js": "7.0.0",
 		"next": "14.2.4",
@@ -55,17 +55,17 @@
 		"postcss-import": "16.1.0",
 		"radix-themes-tw": "0.2.3",
 		"react": "18.3.1",
-		"react-day-picker": "^8.10.1",
+		"react-day-picker": "8.10.1",
 		"react-dom": "18.3.1",
-		"react-hook-form": "^7.51.5",
+		"react-hook-form": "7.51.5",
 		"server-only": "0.0.1",
 		"sonner": "1.5.0",
 		"superjson": "2.2.1",
-		"tailwind-merge": "^2.3.0",
+		"tailwind-merge": "2.3.0",
 		"tailwindcss": "3.4.4",
-		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss-animate": "1.0.7",
 		"typescript": "5.4.5",
-		"zod": "^3.23.8"
+		"zod": "3.23.8"
 	},
 	"devDependencies": {
 		"@simplewebauthn/types": "10.0.0",
