--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -44,6 +44,7 @@
 		"@trpc/server": "11.0.0-rc.403",
 		"@vinejs/vine": "2.1.0",
 		"convert": "5.3.0",
+		"date-fns": "3.6.0",
 		"drizzle-orm": "0.31.2",
 		"postgres": "3.4.4",
 		"reflect-metadata": "0.2.2",
