--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -59,6 +59,7 @@
 		"react-day-picker": "8.10.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "7.52.0",
+		"recharts": "2.12.7",
 		"server-only": "0.0.1",
 		"sonner": "1.5.0",
 		"superjson": "2.2.1",
