--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
 		"@jonahsnider/util": "11.0.0",
 		"@radix-ui/react-alert-dialog": "1.1.1",
 		"@radix-ui/react-avatar": "1.1.0",
+		"@radix-ui/react-checkbox": "^1.1.0",
 		"@radix-ui/react-context-menu": "2.2.1",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "2.1.1",
@@ -43,6 +44,7 @@
 		"chrono-node": "2.7.6",
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.1.1",
+		"cmdk": "^1.0.0",
 		"convert": "5.3.0",
 		"date-fns": "3.6.0",
 		"framer-motion": "11.2.12",
