--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,7 +35,7 @@
 		"@adonisjs/bouncer": "3.1.3",
 		"@adonisjs/core": "6.12.1",
 		"@adonisjs/cors": "2.2.1",
-		"@adonisjs/redis": "9.1.0",
+		"@adonisjs/redis": "patch:@adonisjs/redis@npm%3A9.1.0#~/.yarn/patches/@adonisjs-redis-npm-9.1.0-c8941587e6.patch",
 		"@adonisjs/session": "7.4.2",
 		"@jonahsnider/util": "11.0.0",
 		"@paralleldrive/cuid2": "2.2.2",
