--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,7 +35,7 @@
 		"@adonisjs/bouncer": "3.1.3",
 		"@adonisjs/core": "6.12.1",
 		"@adonisjs/cors": "2.2.1",
-		"@adonisjs/redis": "patch:@adonisjs/redis@npm%3A9.1.0#~/.yarn/patches/@adonisjs-redis-npm-9.1.0-c8941587e6.patch",
+		"@adonisjs/redis": "9.1.0",
 		"@adonisjs/session": "7.4.2",
 		"@jonahsnider/util": "11.0.0",
 		"@paralleldrive/cuid2": "2.2.2",
@@ -47,6 +47,7 @@
 		"drizzle-orm": "0.31.2",
 		"postgres": "3.4.4",
 		"reflect-metadata": "0.2.2",
+		"rxjs": "7.8.1",
 		"superjson": "2.2.1",
 		"ts-pattern": "5.2.0",
 		"zod": "3.23.8"
