--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -43,6 +43,7 @@
 		"@trpc/server": "11.0.0-rc.436",
 		"@vinejs/vine": "2.1.0",
 		"convert": "5.3.0",
+		"crypto-random-string": "5.0.0",
 		"date-fns": "3.6.0",
 		"drizzle-orm": "0.31.2",
 		"postgres": "3.4.4",
