--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,7 +38,6 @@
 		"@types/node": "20.14.9",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
-		"@uidotdev/usehooks": "2.4.1",
 		"@vercel/analytics": "1.3.1",
 		"autoprefixer": "10.4.19",
 		"chrono-node": "2.7.6",
@@ -74,7 +73,6 @@
 	},
 	"devDependencies": {
 		"@simplewebauthn/types": "10.0.0",
-		"dotenv": "16.4.5",
-		"type-fest": "4.20.1"
+		"dotenv": "16.4.5"
 	}
 }
