--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
 		"@radix-ui/react-switch": "1.1.0",
 		"@radix-ui/react-tabs": "1.1.0",
 		"@radix-ui/react-tooltip": "1.1.1",
+		"@sentry/nextjs": "^8.15.0",
 		"@simplewebauthn/browser": "10.0.0",
 		"@tanstack/react-query": "5.49.2",
 		"@tanstack/react-table": "8.19.2",
