--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -39,6 +39,9 @@
 		"@adonisjs/session": "7.4.2",
 		"@jonahsnider/util": "11.0.0",
 		"@paralleldrive/cuid2": "2.2.2",
+		"@rlanz/sentry": "^0.1.0",
+		"@sentry/node": "8.15.0",
+		"@sentry/profiling-node": "8.15.0",
 		"@simplewebauthn/server": "10.0.0",
 		"@trpc/server": "11.0.0-rc.436",
 		"@vinejs/vine": "2.1.0",
