--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,7 +63,7 @@
 		"react-dom": "18.3.1",
 		"react-error-boundary": "4.0.13",
 		"react-hook-form": "7.52.1",
-		"recharts": "2.12.7",
+		"recharts": "^2.12.7",
 		"server-only": "0.0.1",
 		"sonner": "1.5.0",
 		"superjson": "2.2.1",
