--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,6 +50,7 @@
 		"date-fns": "3.6.0",
 		"framer-motion": "11.2.12",
 		"fuse.js": "7.0.0",
+		"mutative": "1.0.6",
 		"next": "14.2.4",
 		"next-plausible": "3.12.0",
 		"next-themes": "0.3.0",
@@ -71,6 +72,7 @@
 		"tailwindcss": "3.4.4",
 		"tailwindcss-animate": "1.0.7",
 		"typescript": "5.5.3",
+		"use-mutative": "1.1.4",
 		"zod": "3.23.8"
 	},
 	"devDependencies": {
