--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -72,6 +72,7 @@
 		"tailwindcss": "3.4.4",
 		"tailwindcss-animate": "1.0.7",
 		"typescript": "5.5.3",
+		"use-debounce": "10.0.1",
 		"use-mutative": "1.1.4",
 		"zod": "3.23.8"
 	},
