--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -66,6 +66,7 @@
 		"react-hook-form": "7.52.1",
 		"recharts": "^2.12.7",
 		"server-only": "0.0.1",
+		"sharp": "0.33.4",
 		"sonner": "1.5.0",
 		"superjson": "2.2.1",
 		"tailwind-merge": "2.3.0",
