--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,6 +41,7 @@
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
 		"@vercel/analytics": "1.3.1",
+		"@vercel/flags": "2.6.0",
 		"autoprefixer": "10.4.19",
 		"chrono-node": "2.7.6",
 		"class-variance-authority": "0.7.0",
