--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -75,6 +75,9 @@
 		"typescript": "5.5.4"
 	},
 	"packageManager": "yarn@4.4.0",
+	"engines": {
+		"node": "22.x"
+	},
 	"hotHook": {
 		"boundaries": [
 			"./app/controllers/**/*.ts",
