--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,7 +40,6 @@
 		"@types/node": "20.15.0",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
-		"@vercel/analytics": "1.3.1",
 		"@vercel/flags": "2.6.0",
 		"autoprefixer": "10.4.20",
 		"chrono-node": "2.7.6",
@@ -59,6 +58,8 @@
 		"nuqs": "1.17.8",
 		"postcss": "8.4.41",
 		"postcss-import": "16.1.0",
+		"posthog-js": "1.155.4",
+		"posthog-node": "4.1.0",
 		"radix-themes-tw": "0.2.3",
 		"react": "18.3.1",
 		"react-day-picker": "8.10.1",
