--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -51,6 +51,7 @@
 		"drizzle-kit": "0.24.0",
 		"drizzle-orm": "0.33.0",
 		"postgres": "3.4.4",
+		"posthog-node": "4.1.0",
 		"reflect-metadata": "0.2.2",
 		"rxjs": "7.8.1",
 		"superjson": "2.2.1",
