--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
 		"@types/node": "20.16.1",
 		"@types/react": "18.3.4",
 		"@types/react-dom": "18.3.0",
+		"@vercel/speed-insights": "1.0.12",
 		"autoprefixer": "10.4.20",
 		"chrono-node": "2.7.6",
 		"class-variance-authority": "0.7.0",
