--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -69,7 +69,7 @@
 		"@types/ws": "^8",
 		"dotenv": "16.4.5",
 		"execa": "9.4.0",
-		"hot-hook": "0.3.0",
+		"hot-hook": "patch:hot-hook@npm%3A0.3.0#~/.yarn/patches/hot-hook-npm-0.3.0-0c210b56e7.patch",
 		"pino-pretty": "11.2.2",
 		"prettier": "3.3.3",
 		"ts-node": "10.9.2",
