--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
 		"test": "yarn lint && yarn format && turbo run build type-check",
 		"type-check": "turbo run type-check"
 	},
+	"resolutions": {
+		"react-is": "^19.0.0-rc-69d4b800-20241021"
+	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.2",
+		"@biomejs/biome": "1.9.4",
 		"prettier": "3.4.2",
-		"prettier-plugin-packagejson": "2.5.8",
-		"turbo": "2.4.0",
-		"vercel": "37.14.0"
+		"prettier-plugin-packagejson": "2.5.6",
+		"turbo": "2.3.3",
+		"vercel": "39.2.0"
 	},
 	"packageManager": "yarn@4.6.0",
 	"engines": {
