--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -28,3 +28,5 @@ jobs:
         run: yarn lint:fix
       - name: Run autofix.ci
         uses: autofix-ci/action@551dded8c6cc8a1054039c8bc0b8b48c51dfc6ef
+        with:
+          commit-message: 'style: apply automatic fixes'
