--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Format with Biome
         run: yarn lint:fix
       - name: Run autofix.ci
-        uses: autofix-ci/action@551dded8c6cc8a1054039c8bc0b8b48c51dfc6ef
+        uses: autofix-ci/action@v1
         with:
           commit-message: 'style: apply automatic fixes'
