--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,7 +51,7 @@
 		"framer-motion": "12.19.1",
 		"fuse.js": "7.1.0",
 		"mutative": "1.2.0",
-		"next": "15.3.5",
+		"next": "15.4.0-canary.116",
 		"next-plausible": "3.12.4",
 		"next-themes": "0.4.6",
 		"next-view-transitions": "0.3.4",
