ci: add Biome schema migration to autofix.ci
Signed-off-by: Jonah Snider <jonah@jonahsnider.com>

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -24,6 +24,8 @@ jobs:
         run: yarn install --immutable
       - name: Format with Prettier
         run: yarn format:write
+      - name: Migrate Biome schema
+        run: yarn biome migrate --write
       - name: Format with Biome
         run: yarn lint:fix
       - name: Run autofix.ci
