--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"build": "NODE_ENV=production next build",
+		"build": "NODE_ENV=production next build --webpack",
 		"dev": "PORT=3000 next dev",
 		"start": "next start",
 		"type-check": "tsc"
@@ -51,7 +51,7 @@
 		"framer-motion": "12.23.24",
 		"fuse.js": "7.1.0",
 		"mutative": "1.3.0",
-		"next": "15.4.0-canary.129",
+		"next": "15.6.0-canary.58",
 		"next-plausible": "3.12.5",
 		"next-themes": "0.4.6",
 		"next-view-transitions": "0.3.4",
