--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -26,5 +26,5 @@
 		"target": "es2022"
 	},
 	"exclude": ["node_modules"],
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".next/dev/types/**/*.ts"]
 }
