--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"build": "NODE_ENV=production next build --webpack",
-		"dev": "PORT=3000 next dev",
+		"dev": "PORT=3000 next dev --webpack",
 		"start": "next start",
 		"type-check": "tsc"
 	},
