build: add next-env.d.ts to more ignore files
Signed-off-by: Jonah Snider <jonah@jonahsnider.com>

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
 			"!**/.vercel",
 			"!**/package.json",
 			"!**/apps/api/build",
-			"!**/.turbo"
+			"!**/.turbo",
+			"!**/next-env.d.ts"
 		]
 	},
 	"formatter": {
