--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,8 +48,8 @@
 		"cmdk": "^1.0.0",
 		"convert": "5.14.1",
 		"date-fns": "4.1.0",
-		"framer-motion": "12.25.0",
 		"fuse.js": "7.1.0",
+		"motion": "12.25.0",
 		"mutative": "1.3.0",
 		"next": "15.6.0-canary.60",
 		"next-plausible": "3.12.5",
